--- a/.github/workflows/rack_install.yml
+++ b/.github/workflows/rack_install.yml
@@ -39,6 +39,9 @@ jobs:
         run: ci/cli.sh
       - name: install
         run: ci/install.sh
+      - name: update
+        run: ci/update.sh
+        if: always()
       - name: wait
         run: sleep 600
       - name: test
