--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,15 +37,19 @@ jobs:
         run: make -C cmd/convox build
         env:
           IMAGE: ${{ github.repository }}
-      - name: build
-        run: docker build -t ${{ github.repository }}:${VERSION} .
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: login
         run: docker login --username "${DOCKER_USERNAME}" --password "${DOCKER_PASSWORD}"
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - name: push
-        run: docker push ${{ github.repository }}:${VERSION}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}        
+      - name: build-amd64
+        run: docker buildx build --platform linux/amd64 -t ${{ github.repository }}:${{ env.VERSION }} --push --cache-from type=registry,ref=${{ github.repository }} --cache-to type=registry,ref=${{ github.repository }},mode=max .
+      - name: build-arm64
+        run: docker buildx build --platform linux/arm64 -t ${{ github.repository }}:${{ env.VERSION }}-arm64 --push --cache-from type=registry,ref=${{ github.repository }} --cache-to type=registry,ref=${{ github.repository }},mode=max --build-arg DOCKER_ARCH=aarch64 --build-arg KUBECTL_ARCH=arm64 .
       - name: release-cli-linux
         uses: actions/upload-release-asset@v1.0.1
         env:
@@ -55,14 +59,32 @@ jobs:
           asset_path: ./cmd/convox/pkg/convox-linux-amd64
           asset_name: convox-linux
           asset_content_type: application/octet-stream
+      - name: release-cli-linux-arm64
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_path: ./cmd/convox/pkg/convox-linux-arm64
+          asset_name: convox-linux-arm64
+          asset_content_type: application/octet-stream
       - name: release-cli-macos
         uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.release.outputs.upload_url }}
-          asset_path: ./cmd/convox/pkg/convox-darwin-10.6-amd64
+          asset_path: ./cmd/convox/pkg/convox-darwin-10.12-amd64
           asset_name: convox-macos
+          asset_content_type: application/octet-stream
+      - name: release-cli-macos-arm64
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_path: ./cmd/convox/pkg/convox-darwin-10.12-arm64
+          asset_name: convox-macos-arm64
           asset_content_type: application/octet-stream
   ci:
     if: github.repository == 'convox/convox'
@@ -71,20 +93,36 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        provider:
+        job:
           - aws
-          # - azure
+          - aws-arm64
           - do
           - gcp
+          # - azure
+        include:
+          - job: aws
+            provider: aws
+          - job: aws-arm64
+            provider: aws
+            rack_params: "node_type=t4g.small"
+            suffix: arm64
+          - job: do
+            provider: do
+          - job: gcp
+            provider: gcp
+          # - job: azure
+          #   provider: azure
     steps:
       - name: checkout
         uses: actions/checkout@v1
       - name: version
         run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
       - name: name
-        run: echo "RACK_NAME=ci-$(date +"%Y%m%d%H%M%S")" >> $GITHUB_ENV
+        run: echo "RACK_NAME=ci-$(date +"%Y%m%d%H%M%S")${{ matrix.suffix }}" >> $GITHUB_ENV
       - name: provider
         run: echo "PROVIDER=${{ matrix.provider }}" >> $GITHUB_ENV
+      - name: rack-params
+        run: echo "RACK_PARAMS=${{ matrix.rack_params }}" >> $GITHUB_ENV
       - name: secrets
         run: ci/secrets.sh
         env:
