--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,14 +4,28 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v1
-    - name: build
-      run: docker build .
+      - name: checkout
+        uses: actions/checkout@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: build
+        run: docker buildx build --platform linux/amd64,linux/arm64 .
   test:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v1
-    - name: test
-      run: make test
+      - name: checkout
+        uses: actions/checkout@v1
+      - name: test
+        run: make test
+  tooling:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v1
+      - name: tools
+        run: make tools
+      - name: cli
+        run: make -C cmd/convox build
+
