--- a/cmd/convox/Makefile
+++ b/cmd/convox/Makefile
@@ -8,7 +8,7 @@ all: build
 build:
 	go env -w GO111MODULE=auto
 	tar cz -C ../.. . | docker run -v $(gopath)/src/github.com/convox/convox:/convox -i ubuntu tar xz -C /convox
-	mkdir -p $(work) && cd $(work) && env GOPATH=$(gopath) $(shell go env GOPATH)/bin/xgo -go go-1.16.9 -pkg cmd/convox -out cmd/convox/pkg/convox -targets 'darwin/amd64,linux/amd64,darwin/arm64,linux/arm64' -ldflags "-X main.version=$(VERSION) -X main.image=$(IMAGE)" .
+	mkdir -p $(work) && cd $(work) && env GOPATH=$(gopath) $(shell go env GOPATH)/bin/xgo -go 1.16.x -pkg cmd/convox -out cmd/convox/pkg/convox -targets 'darwin/amd64,linux/amd64,darwin/arm64,linux/arm64' -ldflags "-X main.version=$(VERSION) -X main.image=$(IMAGE)" .
 	mkdir -p pkg && docker run -v $(gopath):/gopath -i ubuntu tar czv /gopath/src/github.com/convox/convox/cmd/convox/pkg | tar xzv -C pkg --strip-components 8
 
 clean:
