--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v1
+      - name: golang-1.16
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.12'
       - name: version
         run: echo "VERSION=$(echo ${{ github.ref }} | awk -F/ '{print $3}')" >> $GITHUB_ENV
       - name: changelog
@@ -31,8 +35,6 @@ jobs:
           prerelease: true
           release_name: "${{ env.VERSION }}"
           tag_name: ${{ env.VERSION }}
-      - name: tools
-        run: make tools
       - name: cli
         run: make -C cmd/convox build
         env:
@@ -74,7 +76,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.release.outputs.upload_url }}
-          asset_path: ./cmd/convox/pkg/convox-darwin-10.16-amd64
+          asset_path: ./cmd/convox/pkg/convox-darwin-amd64
           asset_name: convox-macos
           asset_content_type: application/octet-stream
       - name: release-cli-macos-arm64
@@ -83,7 +85,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.release.outputs.upload_url }}
-          asset_path: ./cmd/convox/pkg/convox-darwin-10.16-arm64
+          asset_path: ./cmd/convox/pkg/convox-darwin-arm64
           asset_name: convox-macos-arm64
           asset_content_type: application/octet-stream
   ci:
