--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,10 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v1
-      - name: tools
-        run: make tools
+      - name: golang-1.16
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.12'
       - name: cli
         run: make -C cmd/convox build
 
