--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,8 @@ jobs:
           prerelease: true
           release_name: "${{ env.VERSION }}"
           tag_name: ${{ env.VERSION }}
+      - name: tools
+        run: make tools
       - name: cli
         run: make -C cmd/convox build
         env:
@@ -47,7 +49,7 @@ jobs:
         run: docker login --username "${DOCKER_USERNAME}" --password "${DOCKER_PASSWORD}"
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}        
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - name: build-amd64
         run: docker buildx build --platform linux/amd64 -t ${{ github.repository }}:${{ env.VERSION }} --push --cache-from type=registry,ref=${{ github.repository }} --cache-to type=registry,ref=${{ github.repository }},mode=max .
       - name: build-arm64
@@ -76,7 +78,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.release.outputs.upload_url }}
-          asset_path: ./cmd/convox/pkg/convox-darwin-amd64
+          asset_path: ./cmd/convox/pkg/convox-darwin-10.16-amd64
           asset_name: convox-macos
           asset_content_type: application/octet-stream
       - name: release-cli-macos-arm64
