--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,6 +100,7 @@ jobs:
         job:
           - aws
           - aws-arm64
+          - aws-existing-vpc
           - do
           - gcp
           # - azure
@@ -110,6 +111,9 @@ jobs:
             provider: aws
             rack_params: "node_type=t4g.small"
             suffix: arm64
+          - job: aws-existing-vpc
+            provider: aws
+            rack_params: "vpc_id=vpc-0f18b6d1265717215 internet_gateway_id=igw-01c3d338eecec02a1 cidr=172.0.0.0/16"
           - job: do
             provider: do
           - job: gcp
