AWS - Add proxy protocol parameter (client's real source ip) (#440)
* AWS - Add proxy protocol rack pameter

* Add documentation

* tweak tests

* Export aws region

* shorter suffix

* check region secret

* ConfigMap changes and error handling for proxy-protocol.sh

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,11 +109,12 @@ jobs:
             provider: aws
           - job: aws-arm64
             provider: aws
-            rack_params: "node_type=t4g.small"
+            rack_params: "node_type=t4g.small proxy_protocol=true"
             suffix: arm64
           - job: aws-existing-vpc
             provider: aws
             rack_params: "vpc_id=vpc-0f18b6d1265717215 internet_gateway_id=igw-01c3d338eecec02a1 cidr=172.0.0.0/16"
+            suffix: evpc
           - job: do
             provider: do
           - job: gcp
