Configure dependabot for go.mod and terraform files (#461)
* Add support for go.mod dependabot

* Add support for terraform dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,11 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+  - package-ecosystem: "gomod"
+    directory: "/"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: terraform
+    directory: "/terraform"
+    schedule:
+      interval: daily
