--- a/provider/k8s/testdata/release-basic-app.yml
+++ b/provider/k8s/testdata/release-basic-app.yml
@@ -5,7 +5,12 @@ metadata:
     convox.com/lock: "false"
     convox.com/params: '{"Test":"foo"}'
   labels:
+    app: app1
     name: app1
+    provider: k8s
+    rack: rack1
+    release: release2
+    system: convox
     type: app
   name: rack1-app1
   ownerReferences:
@@ -23,8 +28,13 @@ metadata:
     service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
   labels:
+    app: app1
     balancer: alpha
+    provider: k8s
+    rack: rack1
+    release: release2
     service: web
+    system: convox
     type: balancer
   name: balancer-alpha
   namespace: rack1-app1
@@ -63,6 +73,9 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
   labels:
     app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: web
     system: convox
     type: service
@@ -105,6 +118,9 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
   labels:
     app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: web2
     system: convox
     type: service
@@ -134,7 +150,9 @@ kind: ConfigMap
 metadata:
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     resource: four
     system: convox
     type: resource
@@ -146,7 +164,9 @@ kind: PersistentVolumeClaim
 metadata:
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     resource: four
     system: convox
   name: resource-four
@@ -167,7 +187,9 @@ metadata:
     app: app1
     kind: postgres
     name: four
+    provider: k8s
     rack: rack1
+    release: release2
     resource: four
     system: convox
     type: resource
@@ -218,7 +240,9 @@ kind: Service
 metadata:
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     resource: four
     system: convox
     type: resource
@@ -241,7 +265,9 @@ kind: ConfigMap
 metadata:
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     resource: one
     system: convox
     type: resource
@@ -253,7 +279,9 @@ kind: PersistentVolumeClaim
 metadata:
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     resource: one
     system: convox
   name: resource-one
@@ -274,7 +302,9 @@ metadata:
     app: app1
     kind: postgres
     name: one
+    provider: k8s
     rack: rack1
+    release: release2
     resource: one
     system: convox
     type: resource
@@ -325,7 +355,9 @@ kind: Service
 metadata:
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     resource: one
     system: convox
     type: resource
@@ -348,7 +380,9 @@ kind: ConfigMap
 metadata:
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     resource: three
     system: convox
     type: resource
@@ -362,7 +396,9 @@ kind: ConfigMap
 metadata:
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     resource: two
     system: convox
     type: resource
@@ -374,7 +410,9 @@ kind: PersistentVolumeClaim
 metadata:
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     resource: two
     system: convox
   name: resource-two
@@ -394,7 +432,9 @@ metadata:
   labels:
     app: app1
     kind: mysql
+    provider: k8s
     rack: rack1
+    release: release2
     resource: two
     system: convox
     type: resource
@@ -442,7 +482,9 @@ kind: Service
 metadata:
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     resource: two
     system: convox
     type: resource
@@ -473,7 +515,12 @@ data:
 kind: Secret
 metadata:
   labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: agent
+    system: convox
     type: env
   name: env-agent
   namespace: rack1-app1
@@ -484,7 +531,12 @@ kind: ServiceAccount
 metadata:
   annotations: null
   labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: agent
+    system: convox
     type: serviceaccount
   name: agent
   namespace: rack1-app1
@@ -495,7 +547,11 @@ metadata:
   annotations: null
   labels:
     app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: agent
+    system: convox
     type: service
   name: agent
   namespace: rack1-app1
@@ -568,7 +624,9 @@ metadata:
     convox.com/alias: agent.app1.rack1.local
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     service: agent
     system: convox
   name: agent
@@ -603,7 +661,12 @@ data:
 kind: Secret
 metadata:
   labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: deployment
+    system: convox
     type: env
   name: env-deployment
   namespace: rack1-app1
@@ -614,7 +677,12 @@ kind: ServiceAccount
 metadata:
   annotations: null
   labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: deployment
+    system: convox
     type: serviceaccount
   name: deployment
   namespace: rack1-app1
@@ -626,7 +694,11 @@ metadata:
     atom.conditions: Available=True,Progressing=True/NewReplicaSetAvailable
   labels:
     app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: deployment
+    system: convox
     type: service
   name: deployment
   namespace: rack1-app1
@@ -703,7 +775,12 @@ data:
 kind: Secret
 metadata:
   labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: singleton
+    system: convox
     type: env
   name: env-singleton
   namespace: rack1-app1
@@ -714,7 +791,12 @@ kind: ServiceAccount
 metadata:
   annotations: null
   labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: singleton
+    system: convox
     type: serviceaccount
   name: singleton
   namespace: rack1-app1
@@ -726,7 +808,11 @@ metadata:
     atom.conditions: Available=True,Progressing=True/NewReplicaSetAvailable
   labels:
     app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: singleton
+    system: convox
     type: service
   name: singleton
   namespace: rack1-app1
@@ -804,7 +890,12 @@ data:
 kind: Secret
 metadata:
   labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: web
+    system: convox
     type: env
   name: env-web
   namespace: rack1-app1
@@ -815,7 +906,12 @@ kind: ServiceAccount
 metadata:
   annotations: null
   labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: web
+    system: convox
     type: serviceaccount
   name: web
   namespace: rack1-app1
@@ -827,7 +923,11 @@ metadata:
     atom.conditions: Available=True,Progressing=True/NewReplicaSetAvailable
   labels:
     app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: web
+    system: convox
     type: service
   name: web
   namespace: rack1-app1
@@ -928,7 +1028,9 @@ metadata:
     convox.com/alias: web.app1.rack1.local
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     service: web
     system: convox
   name: web
@@ -960,7 +1062,12 @@ data:
 kind: Secret
 metadata:
   labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: web2
+    system: convox
     type: env
   name: env-web2
   namespace: rack1-app1
@@ -971,7 +1078,12 @@ kind: ServiceAccount
 metadata:
   annotations: null
   labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: web2
+    system: convox
     type: serviceaccount
   name: web2
   namespace: rack1-app1
@@ -983,7 +1095,11 @@ metadata:
     atom.conditions: Available=True,Progressing=True/NewReplicaSetAvailable
   labels:
     app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
     service: web2
+    system: convox
     type: service
   name: web2
   namespace: rack1-app1
@@ -1084,7 +1200,9 @@ metadata:
     convox.com/alias: web2.app1.rack1.local
   labels:
     app: app1
+    provider: k8s
     rack: rack1
+    release: release2
     service: web2
     system: convox
   name: web2
@@ -1105,6 +1223,12 @@ null
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
+  labels:
+    app: app1
+    provider: k8s
+    rack: rack1
+    release: release2
+    system: convox
   name: timer-test
   namespace: rack1-app1
 spec:
