--- a/provider/k8s/testdata/release-basic-app.yml
+++ b/provider/k8s/testdata/release-basic-app.yml
@@ -53,7 +53,7 @@ spec:
     type: service
   type: LoadBalancer
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -61,7 +61,6 @@ metadata:
     ann1: val1
     convox.com/backend-protocol: http
     convox.com/idles: "false"
-    kubernetes.io/ingress-class: ""
     nginx.ingress.kubernetes.io/backend-protocol: http
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
@@ -83,19 +82,23 @@ metadata:
   name: web
   namespace: rack1-app1
 spec:
+  ingressClassName: ""
   rules:
   - host: service.host
     http:
       paths:
       - backend:
-          serviceName: web
-          servicePort: 5000
+          service:
+            name: web
+            port:
+              number: 5000
+        pathType: ImplementationSpecific
   tls:
   - hosts:
     - service.host
     secretName: cert-web
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -103,7 +106,6 @@ metadata:
     ann1: val1
     convox.com/backend-protocol: http
     convox.com/idles: "false"
-    kubernetes.io/ingress-class: ""
     nginx.ingress.kubernetes.io/backend-protocol: http
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
@@ -125,13 +127,17 @@ metadata:
   name: web2
   namespace: rack1-app1
 spec:
+  ingressClassName: ""
   rules:
   - host: service.host
     http:
       paths:
       - backend:
-          serviceName: web2
-          servicePort: 5000
+          service:
+            name: web2
+            port:
+              number: 5000
+        pathType: ImplementationSpecific
   tls:
   - hosts:
     - service.host
