extend http example to include a timer

--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -2,3 +2,11 @@ services:
   web:
     image: httpd
     port: 80
+  worker:
+    build: ./worker
+
+timers:
+  cleanup:
+    command: ./usr/src/app/cmd.sh
+    schedule: "* * * * *"
+    service: worker
