add check for timers in the test.sh

--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -7,6 +7,6 @@ services:
 
 timers:
   cleanup:
-    command: ./usr/src/app/cmd.sh
+    command: ./cmd.sh
     schedule: "* * * * *"
     service: worker
