--- a/examples/httpd/worker/Dockerfile
+++ b/examples/httpd/worker/Dockerfile
@@ -5,5 +5,6 @@ COPY . /usr/src/app
 
 RUN chmod +x /usr/src/app/entrypoint.sh
 RUN chmod +x /usr/src/app/cmd.sh
+RUN chmod +x /usr/src/app/long-cmd.sh
 
 CMD ["./entrypoint.sh"]
