--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -6,7 +6,7 @@ services:
     build: ./worker
 
 timers:
-  cleanup:
+  example:
     command: ./cmd.sh
     schedule: "* * * * *"
     service: worker
