--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -1,4 +1,10 @@
 services:
   web:
-    image: httpd
+    build: .
     port: 80
+
+timers:
+  example:
+    command: /usr/local/apache2/timer-cmd.sh
+    schedule: "* * * * *"
+    service: web
