Feat-570: Add e2e downgrade test (#486)
* Add downgrade e2e test

* Add postgres resource e2e test

* Add redis e2e test

* Skip other functionality testing when setting up for downgrade

* Address the reviews

* Rebase with master and remove external image dependency

--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -1,10 +1,18 @@
+resources:
+  postgresdb:
+    type: postgres
+  rediscache:
+    type: redis
 services:
   web:
     build: .
     port: 80
+    resources:
+      - postgresdb:DB_URL
+      - rediscache:REDIS_URL
 
 timers:
   example:
-    command: /usr/local/apache2/timer-cmd.sh
+    command: /usr/scripts/timer-cmd.sh
     schedule: "* * * * *"
     service: web
